# inferDemo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
data/emb/: faceset.json
include/: application.h  facedetector.h  util.h
model/: FaceNet.onnx
src/: application.cpp  facedetector.cpp  main.cpp  util.cpp
